wwwdatadir = $(pkgdatadir)/www

# Main page
nobase_dist_wwwdata_DATA = \
	main.css \
	index.html

# Javascript core
nobase_dist_wwwdata_DATA += \
	jquery-3.0.0.min.js \
	js/player.js \
	js/module.js \
	js/tmp.js \
	js/main.js \
	js/core.js

# Debug page
nobase_dist_wwwdata_DATA += \
	debug/melo_debug.js \
	debug/index.html
