# Melo library headers

libmelo_headers = [
	'melo.h',
	'melo_async.h',
	'melo_browser.h',
	'melo_cover.h',
	'melo_http_client.h',
	'melo_http_server.h',
	'melo_log.h',
	'melo_mdns.h',
	'melo_message.h',
	'melo_module.h',
	'melo_player.h',
	'melo_playlist.h',
	'melo_request.h',
	'melo_rtsp_server.h',
	'melo_settings.h',
	'melo_tags.h',
	'melo_websocket.h'
]

install_headers(libmelo_headers, subdir : 'melo')
